gitlab/gitlab/gitlab-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-service
spec:
  selector:
    app: gitlab-deployment-pod
  ports:
  - port: 80
    targetPort: gitlab-port
