gitlab/gitlab/gitlab-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
spec:
  rules:
  - host: gitlab.berloga.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gitlab-service
            port: 
              number: 80
